refactoring from python2 to python3

--- a/scripts/pyquiver.ipynb
+++ b/scripts/pyquiver.ipynb
@@ -19,13 +19,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Read atomic weight data for 30 elements.\n"
+      "Read atomic weight data for 32 elements.\n"
      ]
     }
    ],
    "source": [
     "# import the necessary package elements\n",
     "import numpy as np\n",
+    "import sys\n",
+    "sys.path.append(\"../src\")\n",
     "from kie import KIE_Calculation"
    ]
   },
@@ -50,14 +52,16 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Reading configuration from ../test/claisen_demo.config\n",
-      "Reading data from ../test/claisen_gs.out... with style g09\n",
-      "Reading data from ../test/claisen_ts.out... with style g09\n",
-      "Config file: ../test/claisen_demo.config\n",
+      "Reading configuration from ../tutorial/gaussian/claisen_demo.config\n",
+      "Reading data from ../tutorial/gaussian/claisen_gs.out... with style g09\n",
+      "Molecule is not linear.\n",
+      "Reading data from ../tutorial/gaussian/claisen_ts.out... with style g09\n",
+      "Molecule is not linear.\n",
+      "Config file: ../tutorial/gaussian/claisen_demo.config\n",
       "Temperature: 393.0 K\n",
       "Scaling: 0.961\n",
       "Reference Isotopologue: C5\n",
-      "Frequency threshold (cm-1): 50\n",
+      "Imag threshold (cm-1): 50\n",
       "   Isotopologue         C5, replacement  1: replace gs atom  5  and ts atom  5  with 13C\n",
       "   Isotopologue         C1, replacement  1: replace gs atom  1  and ts atom  1  with 13C\n",
       "   Isotopologue         C2, replacement  1: replace gs atom  2  and ts atom  2  with 13C\n",
@@ -70,7 +74,7 @@
     }
    ],
    "source": [
-    "claisen_calculation = KIE_Calculation(\"../test/claisen_demo.config\", \"../test/claisen_gs.out\", \"../test/claisen_ts.out\", style=\"g09\")"
+    "claisen_calculation = KIE_Calculation(\"../tutorial/gaussian/claisen_demo.config\", \"../tutorial/gaussian/claisen_gs.out\", \"../tutorial/gaussian/claisen_ts.out\", style=\"g09\")"
    ]
   },
   {
@@ -94,23 +98,23 @@
       "The claisen_calculation object:\n",
       "\n",
       "=== PyQuiver Analysis ===\n",
-      "Isotopologue                                              uncorrected      Wigner     infinite parabola\n",
+      "Isotopologue                                              uncorrected      Wigner     inverted parabola\n",
       "                                                              KIE           KIE              KIE\n",
-      "Isotopologue         C1                                      1.011         1.012            1.013      \n",
-      "Isotopologue         C2                                      1.000         1.000            1.000      \n",
-      "Isotopologue         C4                                      1.028         1.031            1.031      \n",
-      "Isotopologue         C6                                      1.013         1.015            1.015      \n",
-      "Isotopologue        H/D                                      0.953         0.954            0.955      \n",
-      "Isotopologue         O3                                      1.017         1.018            1.019      \n",
+      "Isotopologue         C1                                      1.0108        1.0125          1.0128      \n",
+      "Isotopologue         C2                                      1.0000        1.0000          1.0000      \n",
+      "Isotopologue         O3                                      1.0169        1.0184          1.0187      \n",
+      "Isotopologue         C4                                      1.0278        1.0305          1.0310      \n",
+      "Isotopologue         C6                                      1.0129        1.0146          1.0149      \n",
+      "Isotopologue        H/D                                      0.9530        0.9545          0.9547      \n",
       "\n",
-      "KIEs referenced to isotopologue C5. Absolute KIEs are:\n",
-      "Isotopologue         C5                                      1.002         1.002            1.002      \n"
+      "KIEs referenced to isotopologue C5, whose absolute KIEs are:\n",
+      "Isotopologue         C5                                      1.0019        1.0019          1.0019      \n"
      ]
     }
    ],
    "source": [
-    "print \"The claisen_calculation object:\"\n",
-    "print claisen_calculation"
+    "print(\"The claisen_calculation object:\")\n",
+    "print(claisen_calculation)"
    ]
   },
   {
@@ -132,22 +136,22 @@
      "output_type": "stream",
      "text": [
       "Iterating through the KIEs dictionary:\n",
-      "Isotopologue        H/D                                      0.953         0.954            0.955      \n",
+      "Isotopologue         C1                                      1.0108        1.0125          1.0128      \n",
       "<class 'kie.KIE'>\n",
-      "H/D\n",
-      "[ 0.95303023  0.95446588  0.95471993]\n"
+      "C1\n",
+      "[1.01083044 1.0124856  1.01277832]\n"
      ]
     }
    ],
    "source": [
-    "print \"Iterating through the KIEs dictionary:\"\n",
-    "for name,kie_object in claisen_calculation.KIES.iteritems():\n",
-    "    # prettily print the underlying KIE object:\n",
-    "    print kie_object\n",
+    "print(\"Iterating through the KIEs dictionary:\")\n",
+    "for name,kie_object in claisen_calculation.KIES.items():\n",
+    "    # pretty print the underlying KIE object:\n",
+    "    print(kie_object)\n",
     "    # or pull the name and value directly:\n",
-    "    print type(kie_object)\n",
-    "    print kie_object.name\n",
-    "    print kie_object.value\n",
+    "    print(type(kie_object))\n",
+    "    print(kie_object.name)\n",
+    "    print(kie_object.value)\n",
     "    break"
    ]
   },
@@ -171,34 +175,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reading data from ../test/claisen_gs.out... with style g09\n",
-      "Reading data from ../test/claisen_ts.out... with style g09\n",
+      "Reading data from ../tutorial/gaussian/claisen_gs.out... with style g09\n",
+      "Molecule is not linear.\n",
+      "Reading data from ../tutorial/gaussian/claisen_ts.out... with style g09\n",
+      "Molecule is not linear.\n",
       "Position of atom 0 in the ground state:\n",
-      "[  4.77979210e+00   6.82814755e-01  -3.77945233e-05]\n",
+      "[ 4.77979210e+00  6.82814755e-01 -3.77945233e-05]\n",
       "First row of the Carteisan transition state Hessian:\n",
-      "[  2.57056780e-01  -2.30074910e-01  -1.61921790e-01  -7.65617800e-02\n",
-      "   8.48931300e-02   4.61265000e-03   2.12991400e-02   2.02708700e-02\n",
-      "  -9.63912000e-03  -2.21225000e-02  -1.95310000e-02   2.29953000e-03\n",
-      "  -2.52469200e-02   3.73919800e-02   3.65820000e-04   4.68990400e-02\n",
-      "  -4.44531000e-03   2.23839000e-03  -1.51001280e-01   1.20997920e-01\n",
-      "   8.62933500e-02  -4.74785300e-02   3.22667000e-03   7.38947400e-02\n",
-      "   6.58121000e-03  -8.07384000e-03   5.68738000e-03   2.48980000e-04\n",
-      "  -2.96550000e-04   2.02400000e-04   1.22577000e-03   3.97900000e-04\n",
-      "   4.27820000e-04   7.73690000e-04   2.65800000e-05   1.32620000e-04\n",
-      "  -4.61662000e-03  -1.52566000e-03  -2.75864000e-03  -7.05696000e-03\n",
-      "  -3.25778000e-03  -1.83515000e-03]\n"
+      "[ 2.5705678e-01 -2.3007491e-01 -1.6192179e-01 -7.6561780e-02\n",
+      "  8.4893130e-02  4.6126500e-03  2.1299140e-02  2.0270870e-02\n",
+      " -9.6391200e-03 -2.2122500e-02 -1.9531000e-02  2.2995300e-03\n",
+      " -2.5246920e-02  3.7391980e-02  3.6582000e-04  4.6899040e-02\n",
+      " -4.4453100e-03  2.2383900e-03 -1.5100128e-01  1.2099792e-01\n",
+      "  8.6293350e-02 -4.7478530e-02  3.2266700e-03  7.3894740e-02\n",
+      "  6.5812100e-03 -8.0738400e-03  5.6873800e-03  2.4898000e-04\n",
+      " -2.9655000e-04  2.0240000e-04  1.2257700e-03  3.9790000e-04\n",
+      "  4.2782000e-04  7.7369000e-04  2.6580000e-05  1.3262000e-04\n",
+      " -4.6166200e-03 -1.5256600e-03 -2.7586400e-03 -7.0569600e-03\n",
+      " -3.2577800e-03 -1.8351500e-03]\n"
      ]
     }
    ],
    "source": [
     "from quiver import System\n",
     "\n",
-    "gs = System(\"../test/claisen_gs.out\")\n",
-    "ts = System(\"../test/claisen_ts.out\")\n",
-    "print \"Position of atom 0 in the ground state:\"\n",
-    "print gs.positions[0]\n",
-    "print \"First row of the Carteisan transition state Hessian:\"\n",
-    "print ts.hessian[0]"
+    "gs = System(\"../tutorial/gaussian/claisen_gs.out\")\n",
+    "ts = System(\"../tutorial/gaussian/claisen_ts.out\")\n",
+    "print(\"Position of atom 0 in the ground state:\")\n",
+    "print(gs.positions[0])\n",
+    "print(\"First row of the Carteisan transition state Hessian:\")\n",
+    "print(ts.hessian[0])"
    ]
   },
   {
@@ -222,12 +228,12 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Reading configuration from ../test/claisen_demo.config\n",
-      "Config file: ../test/claisen_demo.config\n",
+      "Reading configuration from ../tutorial/gaussian/claisen_demo.config\n",
+      "Config file: ../tutorial/gaussian/claisen_demo.config\n",
       "Temperature: 393.0 K\n",
       "Scaling: 0.961\n",
       "Reference Isotopologue: C5\n",
-      "Frequency threshold (cm-1): 50\n",
+      "Imag threshold (cm-1): 50\n",
       "   Isotopologue         C5, replacement  1: replace gs atom  5  and ts atom  5  with 13C\n",
       "   Isotopologue         C1, replacement  1: replace gs atom  1  and ts atom  1  with 13C\n",
       "   Isotopologue         C2, replacement  1: replace gs atom  2  and ts atom  2  with 13C\n",
@@ -238,23 +244,23 @@
       "   Isotopologue         O3, replacement  1: replace gs atom  3  and ts atom  3  with 17O\n",
       "\n",
       "=== PyQuiver Analysis ===\n",
-      "Isotopologue                                              uncorrected      Wigner     infinite parabola\n",
+      "Isotopologue                                              uncorrected      Wigner     inverted parabola\n",
       "                                                              KIE           KIE              KIE\n",
-      "Isotopologue         C1                                      1.011         1.012            1.013      \n",
-      "Isotopologue         C2                                      1.000         1.000            1.000      \n",
-      "Isotopologue         C4                                      1.028         1.031            1.031      \n",
-      "Isotopologue         C6                                      1.013         1.015            1.015      \n",
-      "Isotopologue        H/D                                      0.953         0.954            0.955      \n",
-      "Isotopologue         O3                                      1.017         1.018            1.019      \n",
+      "Isotopologue         C1                                      1.0108        1.0125          1.0128      \n",
+      "Isotopologue         C2                                      1.0000        1.0000          1.0000      \n",
+      "Isotopologue         O3                                      1.0169        1.0184          1.0187      \n",
+      "Isotopologue         C4                                      1.0278        1.0305          1.0310      \n",
+      "Isotopologue         C6                                      1.0129        1.0146          1.0149      \n",
+      "Isotopologue        H/D                                      0.9530        0.9545          0.9547      \n",
       "\n",
-      "KIEs referenced to isotopologue C5. Absolute KIEs are:\n",
-      "Isotopologue         C5                                      1.002         1.002            1.002      \n"
+      "KIEs referenced to isotopologue C5, whose absolute KIEs are:\n",
+      "Isotopologue         C5                                      1.0019        1.0019          1.0019      \n"
      ]
     }
    ],
    "source": [
-    "claisen_calculation2 = KIE_Calculation(\"../test/claisen_demo.config\", gs, ts)\n",
-    "print claisen_calculation2"
+    "claisen_calculation2 = KIE_Calculation(\"../tutorial/gaussian/claisen_demo.config\", gs, ts)\n",
+    "print(claisen_calculation2)"
    ]
   },
   {
@@ -292,7 +298,7 @@
     "gs_masses = [DEFAULT_MASSES[z] for z in gs.atomic_numbers]\n",
     "\n",
     "gs_light = Isotopologue(\"the light ground state\", gs, gs_masses)\n",
-    "print gs_light"
+    "print(gs_light)"
    ]
   },
   {
@@ -343,23 +349,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "11.2081236656\n",
-      "[   61.631434     131.33940975   149.25478244   235.05384691   253.61000919\n",
-      "   388.68321807   538.23713827   573.1098416    689.54514791   693.15891096\n",
-      "   713.75792653   824.87106694   863.15186782   950.01325243  1000.01764911\n",
-      "  1000.40305289  1034.40340406  1075.63192671  1229.08835092  1266.54977859\n",
-      "  1298.58236833  1332.35577789  1376.57176191  1456.12070386  1466.42176654\n",
-      "  1501.64974966  1712.50915119  1738.46586076  2871.66940343  2922.94354739\n",
-      "  3159.73242676  3181.30165023  3195.17469476  3209.76123403  3263.87810693\n",
-      "  3278.47225297]\n"
+      "11.208123665562292\n",
+      "[  61.631434    131.33940975  149.25478244  235.05384691  253.61000919\n",
+      "  388.68321807  538.23713827  573.1098416   689.54514791  693.15891096\n",
+      "  713.75792653  824.87106694  863.15186782  950.01325243 1000.01764911\n",
+      " 1000.40305289 1034.40340406 1075.63192671 1229.08835092 1266.54977859\n",
+      " 1298.58236833 1332.35577789 1376.57176191 1456.12070386 1466.42176654\n",
+      " 1501.64974966 1712.50915119 1738.46586076 2871.66940343 2922.94354739\n",
+      " 3159.73242676 3181.30165023 3195.17469476 3209.76123403 3263.87810693\n",
+      " 3278.47225297]\n"
      ]
     }
    ],
    "source": [
     "from kie import calculate_rpfr\n",
     "gs_rpfr, gs_imag_ratio, gs_light_freqs, gs_heavy_freqs = calculate_rpfr((gs_light, gs_heavy), 50.0, 1.0, 273)\n",
-    "print gs_rpfr\n",
-    "print gs_light_freqs"
+    "print(gs_rpfr)\n",
+    "print(gs_light_freqs)"
    ]
   },
   {
@@ -376,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -396,12 +402,12 @@
    "source": [
     "ts_masses = [DEFAULT_MASSES[z] for z in gs.atomic_numbers]\n",
     "ts_light = Isotopologue(\"the light transition state\", ts, ts_masses)\n",
-    "print ts_light\n",
-    "print\n",
+    "print(ts_light)\n",
+    "print()\n",
     "ts_sub_masses = list(ts_masses)\n",
     "ts_sub_masses[3] = 5000.0\n",
     "ts_heavy = Isotopologue(\"the heavy transition state\", ts, ts_sub_masses)\n",
-    "print ts_heavy\n",
+    "print(ts_heavy)\n",
     "\n",
     "gs_tuple = (gs_light, gs_heavy)\n",
     "ts_tuple = (ts_light, ts_heavy)\n",
@@ -422,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -431,14 +437,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Isotopologue Carbon 5000 at C4 KIE                                      2.132         2.345            2.419      \n",
-      "[ 2.13240475  2.34485535  2.41923705]\n"
+      "Isotopologue Carbon 5000 at C4 KIE                                      2.1324        2.3449          2.4192      \n",
+      "[2.13240475 2.34485535 2.41923705]\n"
      ]
     }
    ],
    "source": [
-    "print carbon5000_kie\n",
-    "print carbon5000_kie.value"
+    "print(carbon5000_kie)\n",
+    "print(carbon5000_kie.value)"
    ]
   },
   {
@@ -503,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -532,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -558,12 +564,12 @@
     "gs_filenames = [\"ground_state1.out\", \"gs1_rotomer.out\", \"GROUNDSTATE2.out\", \"gs3.out\"]\n",
     "ts_filenames = [\"ts-1.out\", \"tsrotomer1.out\", \"transition_state2.out\", \"ts3.out\"]\n",
     "\n",
-    "print \"Checking ground state matches:\"\n",
+    "print(\"Checking ground state matches:\")\n",
     "for n in gs_filenames:\n",
-    "    print gs_p(n)\n",
-    "print \"Checking transition state matches:\"\n",
+    "    print(gs_p(n))\n",
+    "print(\"Checking transition state matches:\")\n",
     "for n in ts_filenames:\n",
-    "    print gs_p(n)"
+    "    print(gs_p(n))"
    ]
   },
   {
@@ -575,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -605,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -644,12 +650,12 @@
     "import itertools\n",
     "for gs_n, ts_n in itertools.product(gs_filenames, ts_filenames):\n",
     "    if gs_ts_p(gs_n, ts_n):\n",
-    "        print \"Match: {0} {1}\".format(gs_n, ts_n)"
+    "        print(\"Match: {0} {1}\".format(gs_n, ts_n))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -661,23 +667,23 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "python_3_7",
    "language": "python",
-   "name": "python2"
+   "name": "python_3_7"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.8"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 2
 }
